src/test/testFiles/invalid/semanticErrors/arrayInvalidTypesInConstructorCheck.manimdsl
let x = Array<number>(false);